--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -6,7 +6,7 @@
     <!-- searchbox -->
     <shared-search-box
     (onValue)="searchByCapital($event)"
-    placeholder="Buscar por capital"
+    placeholder="Search by capital"
     ></shared-search-box>
   </div>
 </div>
