--- a/src/app/countries/components/country-table/country-table.component.html
+++ b/src/app/countries/components/country-table/country-table.component.html
@@ -35,7 +35,7 @@
           {{ country.population | number}}
         </td>
         <td>
-          <a href="#">See more</a>
+          <a [routerLink]="[ '/countries/by', country.cca3 ]">Info</a>
         </td>
       </tr>
     </tbody>
