--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -1,1 +1,19 @@
-<p>by-region-page works!</p>
+<h2>By region</h2>
+<hr>
+
+<div class="row">
+  <div class="col">
+    <!-- searchbox -->
+    <shared-search-box
+    placeholder="Search by region"
+    (onValue)="searchRegion($event)"
+    ></shared-search-box>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col">
+    <hr>
+    <countries-table [countries]="countries"></countries-table>
+  </div>
+</div>
