--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -5,7 +5,8 @@
   <div class="col">
     <!-- searchbox -->
     <shared-search-box
-    (onValue)="searchByCapital($event)"
+    (onDebounce)="searchByCapital($event)"
+    [initialValue]= "initialValue"
     placeholder="Search by capital"
     ></shared-search-box>
   </div>
@@ -14,6 +15,8 @@
 <div class="row">
   <div class="col">
     <hr>
+    <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
+
     <countries-table [countries]="countries"></countries-table>
   </div>
 </div>
