--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -4,10 +4,13 @@
 <div class="row">
   <div class="col">
     <!-- searchbox -->
-    <shared-search-box
-    placeholder="Search by region"
-    (onValue)="searchRegion($event)"
-    ></shared-search-box>
+    <button *ngFor="let region of regions"
+      class="btn mx-2"
+      [ngClass]="{'btn-outline-primary': selectedRegion == region}"
+      (click)="searchRegion(region)"
+      >
+      {{ region }}
+    </button>
   </div>
 </div>
 
